--- a/src/components/signup_login/SignupLogin.css
+++ b/src/components/signup_login/SignupLogin.css
@@ -241,3 +241,9 @@
   color: #666;
   font-size: 0.9rem;
 }
+.error-text {
+  color: red;
+  font-size: 0.8em;
+  margin-top: 5px;
+  display: block;
+}
